[package]
name = "brb"
version = "0.1.0"
authors = ["Kirk Peterson <necrobious@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap        = "2.33.0"
log         = { version = "0.4", features = ["std"] }
env_logger  = "0.6"
regex       = "1"
hyper       = "0.13"
futures-core = "0.3"
futures-util = "0.3"
#tokio =  "0.2"
tokio = { version = "0.2", features = ["fs", "macros", "io-std", "rt-util","sync", "blocking", "tcp", "time", "rt-core"] }
net2 = { version = "0.2.32"}
ffs         = { path = "../ffs" }
lazy_static = "1.4.0"
hex         = "0.3"
serde       = "1.0"
serde_json  = "1.0"
sodiumoxide  = "0.2.4"
trustchain  = { git = "https://github.com/necrobious/trust-chain", rev = "3641974"  }
cachet      = { git = "https://github.com/necrobious/cachet", rev = "23736cf"  }
keytree     = { git = "https://github.com/necrobious/keytree" , rev = "3207e94" }
octetkeypair_sodiumoxide = { git = "https://github.com/necrobious/octetkeypair_sodiumoxide" , rev = "770613d" }

